// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoDetectedFailuresDialog on componentDidUpdate does not display dialog when dialog is disabled 1`] = `null`;

exports[`AutoDetectedFailuresDialog on dialog enabled box appears checked when "dont show again" box is clicked 1`] = `
<Dialog
  dialogContentProps={
    Object {
      "title": "Possible failures auto-detected",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "insightsDialogMainOverride",
    }
  }
  onDismiss={[Function]}
>
  <div
    className="dialogBody"
  >
    <ul>
      <li>
        Review each finding to be sure it's valid
      </li>
      <li>
        Add any more failures you discovered manually
      </li>
    </ul>
  </div>
  <StyledDialogFooterBase>
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
      tokens={
        Object {
          "childrenGap": 6,
        }
      }
      verticalAlign="center"
      wrap={true}
    >
      <StackItem
        disableShrink={true}
        grow={true}
      >
        <StyledCheckboxBase
          checked={true}
          label="Don't show again"
          onChange={[Function]}
        />
      </StackItem>
      <StackItem
        grow={true}
      >
        <CustomizedPrimaryButton
          onClick={[Function]}
          text="Got it"
        />
      </StackItem>
    </Stack>
  </StyledDialogFooterBase>
</Dialog>
`;

exports[`AutoDetectedFailuresDialog on dialog enabled is dismissed when "got it" button is clicked 1`] = `null`;

exports[`AutoDetectedFailuresDialog on dialog enabled is dismissed when onDismiss is called 1`] = `null`;

exports[`AutoDetectedFailuresDialog on dialog enabled nothing happens when checkbox change is undefined 1`] = `
<Dialog
  dialogContentProps={
    Object {
      "title": "Possible failures auto-detected",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "insightsDialogMainOverride",
    }
  }
  onDismiss={[Function]}
>
  <div
    className="dialogBody"
  >
    <ul>
      <li>
        Review each finding to be sure it's valid
      </li>
      <li>
        Add any more failures you discovered manually
      </li>
    </ul>
  </div>
  <StyledDialogFooterBase>
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
      tokens={
        Object {
          "childrenGap": 6,
        }
      }
      verticalAlign="center"
      wrap={true}
    >
      <StackItem
        disableShrink={true}
        grow={true}
      >
        <StyledCheckboxBase
          checked={false}
          label="Don't show again"
          onChange={[Function]}
        />
      </StackItem>
      <StackItem
        grow={true}
      >
        <CustomizedPrimaryButton
          onClick={[Function]}
          text="Got it"
        />
      </StackItem>
    </Stack>
  </StyledDialogFooterBase>
</Dialog>
`;

exports[`AutoDetectedFailuresDialog on dialog enabled renders when dialog is enabled 1`] = `
<Dialog
  dialogContentProps={
    Object {
      "title": "Possible failures auto-detected",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "containerClassName": "insightsDialogMainOverride",
    }
  }
  onDismiss={[Function]}
>
  <div
    className="dialogBody"
  >
    <ul>
      <li>
        Review each finding to be sure it's valid
      </li>
      <li>
        Add any more failures you discovered manually
      </li>
    </ul>
  </div>
  <StyledDialogFooterBase>
    <Stack
      horizontal={true}
      horizontalAlign="space-between"
      tokens={
        Object {
          "childrenGap": 6,
        }
      }
      verticalAlign="center"
      wrap={true}
    >
      <StackItem
        disableShrink={true}
        grow={true}
      >
        <StyledCheckboxBase
          checked={false}
          label="Don't show again"
          onChange={[Function]}
        />
      </StackItem>
      <StackItem
        grow={true}
      >
        <CustomizedPrimaryButton
          onClick={[Function]}
          text="Got it"
        />
      </StackItem>
    </Stack>
  </StyledDialogFooterBase>
</Dialog>
`;

exports[`AutoDetectedFailuresDialog renders when dialog is not enabled 1`] = `null`;
